--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2077,12 +2077,11 @@ then {11,99 TRY/Month}*/
 "Office_Filter_Presentation" = "";
 "Office_Filter_All" = "";
 "Office_Filter_PDF" = "";
-"create_collage_triple" = "";
-"create_collage_quad" = "";
-"create_collage_multiple" = "";
+"create_collage_triple" = "Colaj de 3";
+"create_collage_quad" = "Colaj de 4";
+"create_collage_multiple" = "Colaj de Multiplu";
 "create_collage_all" = "";
-"create_collage_select_collage" = "";
-"create_collage_info_label" = "";
+"create_collage_info_label" = "Atingeți orice fotografie pentru a edita";
 
 /*Fotoğraf Seçin*/
 "create_collage_select_photo" = "Selectați Fotografii";
