--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2398,3 +2398,6 @@ then {11,99 TRY/Month}*/
 "create_collage_dual" = "Collage de 2";
 "create_collage" = "Créer un Collage";
 "collage_create_info" = "Cliquez sur plus pour créer un collage";
+"create_collage_select_collage" = "";
+"office_filter_not_found" = "";
+"Office_Filter_Not_Found" = "";
