--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2127,3 +2127,8 @@ then {11,99 TRY/Month}*/
 "create_collage_dual" = "2'li Kolajlar";
 "create_collage" = "Kolaj oluştur";
 "collage_create_info" = "Kolaj oluşturmak için artıya tıklayınız";
+"create_collage_select_collage" = "";
+
+/*Fuzzy*/
+"office_filter_not_found" = "Filtrelemeye çalıştığınız dosya (%@) bulunamadı.";
+"Office_Filter_Not_Found" = "";
