--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2105,3 +2105,6 @@ then {11,99 TRY/Month}*/
 "create_collage_dual" = "2 جزء الكولاج";
 "create_collage" = "قم بإنشاء مجمعة";
 "collage_create_info" = "انقر فوق علامة الجمع لإنشاء مجمعة";
+"create_collage_select_collage" = "";
+"office_filter_not_found" = "";
+"Office_Filter_Not_Found" = "";
