--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2014,7 +2014,7 @@
 "save_to_my_lifebox_full_storage_body" = "You can free up space on this iPhone by managing your storage in Settings.";
 "places_map_title" = "Map";
 "map_location_detail_header" = "Photos at this Location";
-"beeline_feature_cancel_TC" = "You can cancel or manage your lifebox subscription from the Beeline application. ";
+"beeline_feature_cancel_TC" = "You can cancel or manage your lifebox subscription from the Cellfie application. ";
 "security_popup_body" = "Please enter at least 1 field to recover your account easily when you forgot your password";
 "security_popup_header" = "Set Your Recovery E-mail or Security Question";
 "save_to_my_billo" = "Save to My Billo";
@@ -2079,7 +2079,7 @@ then {11,99 TRY/Month}*/
 "paycell_share_message" = "I joined the lifebox Brand Ambassador Program. You can have the program-specific lifebox 6-month 250GB Premium package for discounted price by clicking the link below. Don't miss it 😊";
 
 /*Fuzzy*/
-"beeline_cancel_TC" = "You can cancel or manage your lifebox subscription from the Beeline application.";
+"beeline_cancel_TC" = "You can cancel or manage your lifebox subscription from the Cellfie application.";
 "foryou_throwback" = "Throwback";
 "foryou_myalbums" = "My Albums";
 "foryou_myanimations" = "My Animations";
@@ -2139,19 +2139,22 @@ then {11,99 TRY/Month}*/
 "Office_Filter_Presentation" = "";
 "Office_Filter_All" = "";
 "Office_Filter_PDF" = "";
-"create_collage_triple" = "";
-"create_collage_quad" = "";
-"create_collage_multiple" = "";
+"create_collage_triple" = "Collage of 3";
+"create_collage_quad" = "Collage of 4";
+"create_collage_multiple" = "Collage of Multiple";
 "create_collage_all" = "";
-"create_collage_select_collage" = "";
-"create_collage_info_label" = "";
+"create_collage_info_label" = "Touch any photo to edit";
 
 /*Fotoğraf Seçin*/
-"create_collage_select_photo" = "";
+"create_collage_select_photo" = "Select Photos";
 
 /*+New Collage*/
-"create_collage_preview_main" = "";
+"create_collage_preview_main" = "+Create a Collage";
 
 /*2'li Kolajlar*/
-"create_collage_dual" = "";
+"create_collage_dual" = "Collage of 2";
 "create_collage" = "Create Collage";
+"collage_create_info" = "Click plus to create a collage";
+"create_collage_select_collage" = "";
+"office_filter_not_found" = "";
+"Office_Filter_Not_Found" = "";
