--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2137,4 +2137,5 @@ then {11,99 TRY/Month}*/
 "collage_create_info" = "Haga clic en más para crear un collage";
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "";
+"contact_us_complaint_cellfie" = "Gracias por contactarnos. Su solicitud ha sido reenviada a Cellfie Mobile para su revisión. Compartiremos con ellos cualquier información necesaria que proporcione, como información sobre su dispositivo, información de uso de lifebox, información de contacto e información personal para investigar el problema. Las fotos/videos y otro contenido que cargue en lifebox no se compartirán con Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
