--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2092,5 +2092,6 @@ then {11,99 TRY/Month}*/
 "create_collage" = "შექმენი კოლაჟი";
 "collage_create_info" = "დააჭირე + კოლაჟის შესაქმნელად";
 "create_collage_select_collage" = "შექმენი_კოლაჟი_აარჩიე_კოლაჟი";
-"office_filter_not_found" = "";
+"office_filter_not_found" = "office_filter_not_found";
+"contact_us_complaint_cellfie" = "გმადლობთ, რომ დაგვიკავშირდით. მოთხოვნა განსახილველად გადაეცა სელფი მობაილს . საკითხის დასამუშავებლად,მათ გავუზიარებთ შენს მიერ მოწოდებულ ყველა საჭირო ინფორმაციას, როგორიცაა ინფორმაცია შენს მოწყობილობაზე, Lifebox-ის გამოყენების ინფორმაცია, საკონტაქტო დეტალები და პერსონალური ინფორმაცია. ფოტოები/ვიდეოები და სხვა კონტენტი, რომელსაც ატვირთავ Lifebox-ში, არ იქნება გაზიარებული სელფი მობაილთან.";
 "Office_Filter_Not_Found" = "";
