--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2095,4 +2095,5 @@ then {11,99 TRY/Month}*/
 "collage_create_info" = "Faceți clic pe plus pentru a crea un colaj";
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "";
+"contact_us_complaint_cellfie" = "Vă mulțumim că ne-ați contactat. Cererea dvs. a fost transmis la Cellfie Mobile pentru examinare. Vom împărtăși cu ei orice informații necesare pe care le furnizați, cum ar fi informații despre dispozitivul dvs., informații despre utilizarea lifebox, informații de contact și informații personale pentru a investiga problema. Fotografiile/videoclipurile și alt conținut pe care îl încărcați în lifebox nu vor fi partajate cu Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
