--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2109,4 +2109,5 @@ then {11,99 TRY/Month}*/
 "collage_create_info" = "Нажмите плюс, чтобы создать коллаж";
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "";
+"contact_us_complaint_cellfie" = "Спасибо, что обратились к нам. Ваш запрос был перенаправлен в Cellfie Mobile для рассмотрения. Мы поделимся с ними любой необходимой информацией, которую вы предоставите, такой как информация о вашем устройстве, информация об использовании lifebox, контактная информация и личная информация для расследования проблемы. Фотографии/видео и другой контент, который вы загружаете в lifebox, не будут доступны Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
