--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2097,4 +2097,5 @@ then {11,99 TRY/Month}*/
 "collage_create_info" = "Натисніть плюс, щоб створити колаж";
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "";
+"contact_us_complaint_cellfie" = "Дякуємо, що звернулися до нас. Ваш запит було перенаправлено на Cellfie Mobile для розгляду. Ми поділимося з ними будь-якою необхідною інформацією, яку Ви надасте, такою як інформація про ваш пристрій, інформація про використання lifebox, контактна інформація та особиста інформація для розслідування проблеми. Фотографії/відео та інший вміст, який ви завантажуєте в lifebox, не будуть доступні Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
