--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2138,4 +2138,5 @@ then {11,99 TRY/Month}*/
 "collage_create_info" = "Klikoni në plus për të krijuar një kolazh";
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "";
+"contact_us_complaint_cellfie" = "Faleminderit që na kontaktuat. Kërkesa juaj është përcjellë Në Cellfie Mobile për shqyrtim. Ne do të ndajmë me ta çdo informacion të nevojshëm që ju jepni, të tilla si informacion në lidhje me pajisjen tuaj, informacionin e përdorimit të lifebox, informacionin e kontaktit dhe informacionin personal për të hetuar çështjen. Fotografitë/videot dhe përmbajtjet e tjera që ngarkoni në lifebox nuk do të ndahen me Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
