contact us add text for cellfie

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2128,17 +2128,17 @@ then {11,99 TRY/Month}*/
 "notification_buttom_sheet_only_unread" = "Only unread";
 "notification_buttom_sheet_show_alerts" = "Only show alerts";
 "notifications_no_notification" = "No new notification";
-"Create_Word" = "";
-"Create_Cell" = "";
-"Create_Slide" = "";
-"Create_Document_Popup" = "";
-"Create_Document_Create_Button" = "";
-"Create_Document_Cancel_Button" = "";
-"Office_Filter_Document" = "";
-"Office_Filter_SpreedSheet" = "";
-"Office_Filter_Presentation" = "";
-"Office_Filter_All" = "";
-"Office_Filter_PDF" = "";
+"Create_Word" = "New Document";
+"Create_Cell" = "New Spreadsheet";
+"Create_Slide" = "New Presentation";
+"Create_Document_Popup" = "New Document";
+"Create_Document_Create_Button" = "Create";
+"Create_Document_Cancel_Button" = "Cancel";
+"Office_Filter_Document" = "Document";
+"Office_Filter_SpreedSheet" = "Spreadsheet";
+"Office_Filter_Presentation" = "Presentation";
+"Office_Filter_All" = "All";
+"Office_Filter_PDF" = "Pdf";
 "create_collage_triple" = "Collage of 3";
 "create_collage_quad" = "Collage of 4";
 "create_collage_multiple" = "Collage of Multiple";
@@ -2155,3 +2155,8 @@ then {11,99 TRY/Month}*/
 "create_collage_dual" = "Collage of 2";
 "create_collage" = "Create Collage";
 "collage_create_info" = "Click plus to create a collage";
+"create_collage_select_collage" = "";
+"office_filter_not_found" = "The file (%@) you are trying to filter could not be found.";
+"contact_us_complaint_cellfie" = "Thanks for contacting us. Your request has been forwarded to Cellfie Mobile for review. We will share with them any necessary information you provide, such as information about your device, lifebox usage information, contact information, and personal information to investigate the issue. Photos/videos and other content you upload to lifebox will not be shared with Cellfie Mobile.";
+"Office_Filter_Not_Found" = "";
+"new_print" = "";
