--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2066,17 +2066,17 @@ then {11,99 TRY/Month}*/
 "notification_buttom_sheet_only_unread" = "Numai necitite";
 "notification_buttom_sheet_show_alerts" = "Afișează numai alerte";
 "notifications_no_notification" = "Nu aveți notificări noi";
-"Create_Word" = "";
-"Create_Cell" = "";
-"Create_Slide" = "";
-"Create_Document_Popup" = "";
-"Create_Document_Create_Button" = "";
-"Create_Document_Cancel_Button" = "";
-"Office_Filter_Document" = "";
-"Office_Filter_SpreedSheet" = "";
-"Office_Filter_Presentation" = "";
-"Office_Filter_All" = "";
-"Office_Filter_PDF" = "";
+"Create_Word" = "Document Nou";
+"Create_Cell" = "Foaie De Calcul Nouă";
+"Create_Slide" = "Prezentare Nouă";
+"Create_Document_Popup" = "Document Nou";
+"Create_Document_Create_Button" = "Crea";
+"Create_Document_Cancel_Button" = "Anulare";
+"Office_Filter_Document" = "Document";
+"Office_Filter_SpreedSheet" = "Foaie de Calcul";
+"Office_Filter_Presentation" = "Prezentare";
+"Office_Filter_All" = "Toate";
+"Office_Filter_PDF" = "Pdf";
 "create_collage_triple" = "Colaj de 3";
 "create_collage_quad" = "Colaj de 4";
 "create_collage_multiple" = "Colaj de Multiplu";
@@ -2093,3 +2093,8 @@ then {11,99 TRY/Month}*/
 "create_collage_dual" = "Colaj de 2";
 "create_collage" = "Creați Colaj";
 "collage_create_info" = "Faceți clic pe plus pentru a crea un colaj";
+"create_collage_select_collage" = "";
+"office_filter_not_found" = "Fișierul (%@) pe care încercați să îl filtrați nu a putut fi găsit.";
+"contact_us_complaint_cellfie" = "Vă mulțumim că ne-ați contactat. Cererea dvs. a fost transmis la Cellfie Mobile pentru examinare. Vom împărtăși cu ei orice informații necesare pe care le furnizați, cum ar fi informații despre dispozitivul dvs., informații despre utilizarea lifebox, informații de contact și informații personale pentru a investiga problema. Fotografiile/videoclipurile și alt conținut pe care îl încărcați în lifebox nu vor fi partajate cu Cellfire Mobile.";
+"Office_Filter_Not_Found" = "";
+"new_print" = "";
