--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2068,17 +2068,17 @@ then {11,99 TRY/Month}*/
 "notification_buttom_sheet_only_unread" = "Тільки непрочитані";
 "notification_buttom_sheet_show_alerts" = "Показувати лише оповіщення";
 "notifications_no_notification" = "У вас немає нових повідомлень";
-"Create_Word" = "";
-"Create_Cell" = "";
-"Create_Slide" = "";
-"Create_Document_Popup" = "";
-"Create_Document_Create_Button" = "";
-"Create_Document_Cancel_Button" = "";
-"Office_Filter_Document" = "";
-"Office_Filter_SpreedSheet" = "";
-"Office_Filter_Presentation" = "";
-"Office_Filter_All" = "";
-"Office_Filter_PDF" = "";
+"Create_Word" = "Новий Документ";
+"Create_Cell" = "Нова Робоча Таблиця";
+"Create_Slide" = "Нова Презентація";
+"Create_Document_Popup" = "Новий Документ";
+"Create_Document_Create_Button" = "Створити";
+"Create_Document_Cancel_Button" = "Скасувати";
+"Office_Filter_Document" = "Документ";
+"Office_Filter_SpreedSheet" = "Робоча Таблиця";
+"Office_Filter_Presentation" = "Презентація";
+"Office_Filter_All" = "Все";
+"Office_Filter_PDF" = "Pdf";
 "create_collage_triple" = "Колаж із 3 частин";
 "create_collage_quad" = "Колаж із 4 частин";
 "create_collage_multiple" = "Мульти-Колаж";
@@ -2095,3 +2095,8 @@ then {11,99 TRY/Month}*/
 "create_collage_dual" = "Колаж із 2 частин";
 "create_collage" = "Створити Колаж";
 "collage_create_info" = "Натисніть плюс, щоб створити колаж";
+"create_collage_select_collage" = "";
+"office_filter_not_found" = "Файл (%@), який ви намагаєтесь фільтрувати, не знайдено.";
+"contact_us_complaint_cellfie" = "Дякуємо, що звернулися до нас. Ваш запит було перенаправлено на Cellfie Mobile для розгляду. Ми поділимося з ними будь-якою необхідною інформацією, яку Ви надасте, такою як інформація про ваш пристрій, інформація про використання lifebox, контактна інформація та особиста інформація для розслідування проблеми. Фотографії/відео та інший вміст, який ви завантажуєте в lifebox, не будуть доступні Cellfire Mobile.";
+"Office_Filter_Not_Found" = "";
+"new_print" = "";
