--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2109,17 +2109,17 @@ then {11,99 TRY/Month}*/
 "notification_buttom_sheet_only_unread" = "Vetëm të palexuar";
 "notification_buttom_sheet_show_alerts" = "Shfaq vetëm sinjalizime";
 "notifications_no_notification" = "Nuk ka asnjë njoftim të ri";
-"Create_Word" = "";
-"Create_Cell" = "";
-"Create_Slide" = "";
-"Create_Document_Popup" = "";
-"Create_Document_Create_Button" = "";
-"Create_Document_Cancel_Button" = "";
-"Office_Filter_Document" = "";
-"Office_Filter_SpreedSheet" = "";
-"Office_Filter_Presentation" = "";
-"Office_Filter_All" = "";
-"Office_Filter_PDF" = "";
+"Create_Word" = "Dokument I Ri";
+"Create_Cell" = "Fletëllogaritëse E Re";
+"Create_Slide" = "Prezantim I Ri";
+"Create_Document_Popup" = "Dokument I Ri";
+"Create_Document_Create_Button" = "Krijo";
+"Create_Document_Cancel_Button" = "Anulo";
+"Office_Filter_Document" = "Dokument";
+"Office_Filter_SpreedSheet" = "Fletëllogaritëse";
+"Office_Filter_Presentation" = "Prezantimi";
+"Office_Filter_All" = "Të gjitha";
+"Office_Filter_PDF" = "Pdf";
 "create_collage_triple" = "Kolazh me 3 pjesë";
 "create_collage_quad" = "Kolazh me 4 pjesë";
 "create_collage_multiple" = "Kolazh i Shumëfishtë";
@@ -2136,3 +2136,8 @@ then {11,99 TRY/Month}*/
 "create_collage_dual" = "Kolazh me 2 pjesë";
 "create_collage" = "Krijo Kolazh";
 "collage_create_info" = "Klikoni në plus për të krijuar një kolazh";
+"create_collage_select_collage" = "";
+"office_filter_not_found" = "Skedari (%@) që po përpiqeni të filtroni nuk mund të gjendet.";
+"contact_us_complaint_cellfie" = "Faleminderit që na kontaktuat. Kërkesa juaj është përcjellë Në Cellfie Mobile për shqyrtim. Ne do të ndajmë me ta çdo informacion të nevojshëm që ju jepni, të tilla si informacion në lidhje me pajisjen tuaj, informacionin e përdorimit të lifebox, informacionin e kontaktit dhe informacionin personal për të hetuar çështjen. Fotografitë/videot dhe përmbajtjet e tjera që ngarkoni në lifebox nuk do të ndahen me Cellfire Mobile.";
+"Office_Filter_Not_Found" = "";
+"new_print" = "";
