--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2136,10 +2136,18 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Crear Collage";
 "collage_create_info" = "Haga clic en más para crear un collage";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Gracias por contactarnos. Su solicitud ha sido reenviada a Cellfie Mobile para su revisión. Compartiremos con ellos cualquier información necesaria que proporcione, como información sobre su dispositivo, información de uso de lifebox, información de contacto e información personal para investigar el problema. Las fotos/videos y otro contenido que cargue en lifebox no se compartirán con Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "No se pudo encontrar el archivo (%@) que intenta filtrar.";
 "contact_us_complaint_cellfie" = "Gracias por contactarnos. Su solicitud ha sido reenviada a Cellfie Mobile para su revisión. Compartiremos con ellos cualquier información necesaria que proporcione, como información sobre su dispositivo, información de uso de lifebox, información de contacto e información personal para investigar el problema. Las fotos/videos y otro contenido que cargue en lifebox no se compartirán con Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
 "new_print" = "";
+"print_info_popup_title" = "";
+"print_info_popup_subtitle" = "";
+"print_info_popup_checkbox" = "";
+"print_select_photo_button" = "";
+"print_select_photo_screen" = "";
+"print_select_photo_screen_bar" = "";
+"print_continue_button" = "";
+"print_missing_photo_popup_title" = "";
+"print_missing_photo_popup_subtitle" = "";
+"create_cell_popup" = "";
+"create_slide_popup" = "";
