--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2106,10 +2106,18 @@ then {11,99 TRY/Month}*/
 "create_collage" = "قم بإنشاء مجمعة";
 "collage_create_info" = "انقر فوق علامة الجمع لإنشاء مجمعة";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "شكرا على الاتصال بنا. تمت إعادة توجيه طلبك إلىCellfie Mobile للمراجعة. سنشارك معهم أي معلومات ضرورية تقدمها ، مثل معلومات حول جهازك ، ومعلومات استخدام lifebox ، ومعلومات الاتصال ، والمعلومات الشخصية للتحقيق في المشكلة. لن تتم مشاركة الصور/مقاطع الفيديو والمحتويات الأخرى التي تقوم بتحميلها إلى lifebox مع Cellfie Mobile.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "تعذر العثور على الملف (%@) الذي تحاول تصفيته.";
 "contact_us_complaint_cellfie" = "شكرا على الاتصال بنا. تمت إعادة توجيه طلبك إلىCellfie Mobile للمراجعة. سنشارك معهم أي معلومات ضرورية تقدمها ، مثل معلومات حول جهازك ، ومعلومات استخدام lifebox ، ومعلومات الاتصال ، والمعلومات الشخصية للتحقيق في المشكلة. لن تتم مشاركة الصور/مقاطع الفيديو والمحتويات الأخرى التي تقوم بتحميلها إلى lifebox مع Cellfie Mobile.";
 "Office_Filter_Not_Found" = "";
 "new_print" = "";
+"print_info_popup_title" = "";
+"print_info_popup_subtitle" = "";
+"print_info_popup_checkbox" = "";
+"print_select_photo_button" = "";
+"print_select_photo_screen" = "";
+"print_select_photo_screen_bar" = "";
+"print_continue_button" = "";
+"print_missing_photo_popup_title" = "";
+"print_missing_photo_popup_subtitle" = "";
+"create_cell_popup" = "";
+"create_slide_popup" = "";
