--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2094,10 +2094,18 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Collage Erstellen";
 "collage_create_info" = "Klicken Sie auf Plus, um eine Collage zu erstellen";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Danke, dass Sie uns kontaktiert haben. Ihre Anfrage wurde zur Überprüfung an Cellfie Mobile weitergeleitet. Wir werden mit ihnen alle notwendigen Informationen teilen, die Sie zur Verfügung stellen, wie Informationen über Ihr Gerät, lifebox-Nutzungsinformationen, Kontaktinformationen und persönliche Informationen, um das Problem zu untersuchen. Fotos/Videos und andere Inhalte, die Sie auf lifebox hochladen, werden nicht mit Cellfire Mobile geteilt.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "Die Datei (%@), die Sie filtern möchten, wurde nicht gefunden.";
 "contact_us_complaint_cellfie" = "Danke, dass Sie uns kontaktiert haben. Ihre Anfrage wurde zur Überprüfung an Cellfie Mobile weitergeleitet. Wir werden mit ihnen alle notwendigen Informationen teilen, die Sie zur Verfügung stellen, wie Informationen über Ihr Gerät, lifebox-Nutzungsinformationen, Kontaktinformationen und persönliche Informationen, um das Problem zu untersuchen. Fotos/Videos und andere Inhalte, die Sie auf lifebox hochladen, werden nicht mit Cellfire Mobile geteilt.";
 "Office_Filter_Not_Found" = "";
 "new_print" = "";
+"print_info_popup_title" = "";
+"print_info_popup_subtitle" = "";
+"print_info_popup_checkbox" = "";
+"print_select_photo_button" = "";
+"print_select_photo_screen" = "";
+"print_select_photo_screen_bar" = "";
+"print_continue_button" = "";
+"print_missing_photo_popup_title" = "";
+"print_missing_photo_popup_subtitle" = "";
+"create_cell_popup" = "";
+"create_slide_popup" = "";
