--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2399,10 +2399,18 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Créer un Collage";
 "collage_create_info" = "Cliquez sur plus pour créer un collage";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Merci de nous avoir contacté. Votre demande a été transmise à Cellfie Mobile pour examen. Nous partagerons avec eux toutes les informations nécessaires que vous fournissez, telles que des informations sur votre appareil, des informations sur l'utilisation de lifebox, des informations de contact et des informations personnelles pour enquêter sur le problème. Les photos/vidéos et autres contenus que vous téléchargez sur lifebox ne seront pas partagés avec Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "Le fichier (%@) que vous essayez de filtrer est introuvable.";
 "contact_us_complaint_cellfie" = "Merci de nous avoir contacté. Votre demande a été transmise à Cellfie Mobile pour examen. Nous partagerons avec eux toutes les informations nécessaires que vous fournissez, telles que des informations sur votre appareil, des informations sur l'utilisation de lifebox, des informations de contact et des informations personnelles pour enquêter sur le problème. Les photos/vidéos et autres contenus que vous téléchargez sur lifebox ne seront pas partagés avec Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
 "new_print" = "";
+"print_info_popup_title" = "";
+"print_info_popup_subtitle" = "";
+"print_info_popup_checkbox" = "";
+"print_select_photo_button" = "";
+"print_select_photo_screen" = "";
+"print_select_photo_screen_bar" = "";
+"print_continue_button" = "";
+"print_missing_photo_popup_title" = "";
+"print_missing_photo_popup_subtitle" = "";
+"create_cell_popup" = "";
+"create_slide_popup" = "";
