--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2108,10 +2108,18 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Создать Коллаж";
 "collage_create_info" = "Нажмите плюс, чтобы создать коллаж";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Спасибо, что обратились к нам. Ваш запрос был перенаправлен в Cellfie Mobile для рассмотрения. Мы поделимся с ними любой необходимой информацией, которую вы предоставите, такой как информация о вашем устройстве, информация об использовании lifebox, контактная информация и личная информация для расследования проблемы. Фотографии/видео и другой контент, который вы загружаете в lifebox, не будут доступны Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "Файл (%@), который вы пытаетесь фильтровать, не найден.";
 "contact_us_complaint_cellfie" = "Спасибо, что обратились к нам. Ваш запрос был перенаправлен в Cellfie Mobile для рассмотрения. Мы поделимся с ними любой необходимой информацией, которую вы предоставите, такой как информация о вашем устройстве, информация об использовании lifebox, контактная информация и личная информация для расследования проблемы. Фотографии/видео и другой контент, который вы загружаете в lifebox, не будут доступны Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
 "new_print" = "";
+"print_info_popup_title" = "";
+"print_info_popup_subtitle" = "";
+"print_info_popup_checkbox" = "";
+"print_select_photo_button" = "";
+"print_select_photo_screen" = "";
+"print_select_photo_screen_bar" = "";
+"print_continue_button" = "";
+"print_missing_photo_popup_title" = "";
+"print_missing_photo_popup_subtitle" = "";
+"create_cell_popup" = "";
+"create_slide_popup" = "";
