--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2096,10 +2096,18 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Створити Колаж";
 "collage_create_info" = "Натисніть плюс, щоб створити колаж";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Дякуємо, що звернулися до нас. Ваш запит було перенаправлено на Cellfie Mobile для розгляду. Ми поділимося з ними будь-якою необхідною інформацією, яку Ви надасте, такою як інформація про ваш пристрій, інформація про використання lifebox, контактна інформація та особиста інформація для розслідування проблеми. Фотографії/відео та інший вміст, який ви завантажуєте в lifebox, не будуть доступні Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "Файл (%@), який ви намагаєтесь фільтрувати, не знайдено.";
 "contact_us_complaint_cellfie" = "Дякуємо, що звернулися до нас. Ваш запит було перенаправлено на Cellfie Mobile для розгляду. Ми поділимося з ними будь-якою необхідною інформацією, яку Ви надасте, такою як інформація про ваш пристрій, інформація про використання lifebox, контактна інформація та особиста інформація для розслідування проблеми. Фотографії/відео та інший вміст, який ви завантажуєте в lifebox, не будуть доступні Cellfire Mobile.";
 "Office_Filter_Not_Found" = "";
 "new_print" = "";
+"print_info_popup_title" = "";
+"print_info_popup_subtitle" = "";
+"print_info_popup_checkbox" = "";
+"print_select_photo_button" = "";
+"print_select_photo_screen" = "";
+"print_select_photo_screen_bar" = "";
+"print_continue_button" = "";
+"print_missing_photo_popup_title" = "";
+"print_missing_photo_popup_subtitle" = "";
+"create_cell_popup" = "";
+"create_slide_popup" = "";
