--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2171,3 +2171,18 @@ then {11,99 TRY/Month}*/
 "print_missing_photo_popup_subtitle" = "";
 "create_cell_popup" = "";
 "create_slide_popup" = "";
+"kktc_restore_info" = "Kuzey Kıbrıs Turkcell customers can start their membership to their line by typing LIFEBOX 50GB for 50GB lifebox package, LIFEBOX 500GB for lifebox 500GB package and LIFEBOX 2.5TB for lifebox 2.5TB package and send to 3030.";
+"edit_printphoto_info_label" = "";
+"print_edit_photo_page_name" = "";
+"print_photo_bad_quality_info" = "";
+"print_photo_bad_quality_continue" = "";
+"print_photo_bad_quality_new" = "";
+"no_print_package_info" = "";
+"print_package_question" = "";
+"print_package_view" = "";
+"printed_photo_card_title" = "";
+"printed_photo_card_info" = "";
+"printed_photo_card_body" = "";
+"printed_photo_card_body_no_right" = "";
+"printed_photo_card_info_no_right" = "";
+"printed_package_view" = "";
