--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2151,3 +2151,18 @@ then {11,99 TRY/Month}*/
 "print_missing_photo_popup_subtitle" = "";
 "create_cell_popup" = "";
 "create_slide_popup" = "";
+"kktc_restore_info" = "Los clientes de Kuzey Kıbrıs Turkcell pueden iniciar su membresía en su línea escribiendo LIFEBOX 50GB para el paquete lıfebox de 50GB, LIFEBOX 500GB para el paquete lifebox de 500GB y LIFEBOX 2.5TB para el paquete lifebox de 2.5TB y enviar a 3030.";
+"edit_printphoto_info_label" = "";
+"print_edit_photo_page_name" = "";
+"print_photo_bad_quality_info" = "";
+"print_photo_bad_quality_continue" = "";
+"print_photo_bad_quality_new" = "";
+"no_print_package_info" = "";
+"print_package_question" = "";
+"print_package_view" = "";
+"printed_photo_card_title" = "";
+"printed_photo_card_info" = "";
+"printed_photo_card_body" = "";
+"printed_photo_card_body_no_right" = "";
+"printed_photo_card_info_no_right" = "";
+"printed_package_view" = "";
