--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2414,3 +2414,18 @@ then {11,99 TRY/Month}*/
 "print_missing_photo_popup_subtitle" = "";
 "create_cell_popup" = "";
 "create_slide_popup" = "";
+"kktc_restore_info" = "Les clients de Kuzey Kıbrıs Turkcell peuvent commencer leur abonnement à leur ligne en tapant LIFEBOX 50GB pour le forfait lifebox 50 Go, LIFEBOX 500GB pour le forfait lifebox 500 Go et LIFEBOX 2.5TB pour le forfait lifebox 2,5 To et envoyer au 3030.";
+"edit_printphoto_info_label" = "";
+"print_edit_photo_page_name" = "";
+"print_photo_bad_quality_info" = "";
+"print_photo_bad_quality_continue" = "";
+"print_photo_bad_quality_new" = "";
+"no_print_package_info" = "";
+"print_package_question" = "";
+"print_package_view" = "";
+"printed_photo_card_title" = "";
+"printed_photo_card_info" = "";
+"printed_photo_card_body" = "";
+"printed_photo_card_body_no_right" = "";
+"printed_photo_card_info_no_right" = "";
+"printed_package_view" = "";
