--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2152,3 +2152,18 @@ then {11,99 TRY/Month}*/
 "print_missing_photo_popup_subtitle" = "";
 "create_cell_popup" = "";
 "create_slide_popup" = "";
+"kktc_restore_info" = "Kuzey Kıbrıs Turkcell klientët mund të fillojnë anëtarësimin e tyre në linjën e tyre duke shtypur LIFEBOX 50GB për paketën lifebox 50gb, LIFEBOX 500GB për paketën lifebox 500gb dhe LIFEBOX 2.5TB për paketën lifebox 2.5tb dhe të dërgojnë në 3030.";
+"edit_printphoto_info_label" = "";
+"print_edit_photo_page_name" = "";
+"print_photo_bad_quality_info" = "";
+"print_photo_bad_quality_continue" = "";
+"print_photo_bad_quality_new" = "";
+"no_print_package_info" = "";
+"print_package_question" = "";
+"print_package_view" = "";
+"printed_photo_card_title" = "";
+"printed_photo_card_info" = "";
+"printed_photo_card_body" = "";
+"printed_photo_card_body_no_right" = "";
+"printed_photo_card_info_no_right" = "";
+"printed_package_view" = "";
